master: the song component implements default cover now, i realize that when a user delete a song from current package, the songs cover are getting fetcheds.

--- a/src/app/pages/centers/information/information.component.html
+++ b/src/app/pages/centers/information/information.component.html
@@ -28,6 +28,10 @@
         to open the <strong>downloaded JSON</strong> and click on download button.
         It's all, your songs will start to be downloaded.
       </question>
+      <question title="Where can i find tags information?">
+        There are a lot of options, we recommend to use
+        <a href="https://www.genius.com" rel="noopener noreferrer" target="_blank">Genius</a>.
+      </question>
       <question title="Is it completely free?">
         Yes, the fetched data for Lasso is brought from the most used music stream platforms
         (<a href="https://www.spotify.com" rel="noopener noreferrer" target="_blank">Spotify</a> and
