--- a/src/app/pages/create/main-form/main-form.component.html
+++ b/src/app/pages/create/main-form/main-form.component.html
@@ -12,4 +12,4 @@
   <action-button [goback]="true"></action-button>
   <action-button (click)="form.valid && onSubmit()" [disabled]="form.invalid"></action-button>
 </div>
-<a href="">Where can i find these information?</a>
+<a routerLink="/center/information">Where can i find that information?</a>
