--- a/src/app/pages/package/package.component.scss
+++ b/src/app/pages/package/package.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 55px 10px;
+  padding: 60px 10px;
   height: calc(100vh - (55px * 2));
   max-width: 600px;
   margin: auto;
@@ -27,7 +27,8 @@
   .btns-group {
     display: flex;
     margin: 0 10px 10px 10px;
-    button {
+    a { text-decoration: none }
+    button, a {
       width: 100%;
       padding: 12px 0;
       font-size: 1em;
@@ -47,3 +48,5 @@
     }
   }
 }
+
+:host ::ng-deep slide-message div { max-width: 340px !important }
