master: the check on fetched and loader is ready, i need to summarize a lot of code.

--- a/src/app/pages/package/package.component.html
+++ b/src/app/pages/package/package.component.html
@@ -7,9 +7,10 @@
     <ng-container *ngIf="_package.length; else emptyPackage">
       <song *ngFor="let song of _package"
         [data]="song"
+        [loading]="fetching"
         [index]="_package.indexOf(song)"
         (onDelete)="deleteHandler($event)"
-        [loading]="fetching"
+        (onFetched)="completeSongPusher($event)"
         style="margin: 10px; border-radius: 6px">
       </song>
     </ng-container>
