--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,11 @@
-<div class="home-page" [ngClass]="{ 'nodata-pos': !songs.length }">
+<div class="home-page" [ngClass]="{ 'on-empty': !songs.length }">
   <div class="presentation">
     <h1>Lasso</h1>
     <p>A music downloader</p>
   </div>
   <div class="query-interaction">
     <div class="search-input">
-      <figure class="filter">
+      <figure class="icon">
         <img src="assets/icons/music.svg" alt="">
       </figure>      
       <input
@@ -16,8 +16,7 @@
         (keyup)="onSongChange()"
       />
     </div>
-    <div class="results" (window:scroll)="onScroll()"
-      [ngClass]="{ 'no-results': !songs.length }">
+    <div class="results" (window:scroll)="onScroll()" [ngClass]="{ 'no-results': !songs.length }">
       <ng-lottie
         class="loader-lottie"
         [options]="loaderLottie"
@@ -37,7 +36,7 @@
   </div>
   <div class="not-found-action">
     Not found song?
-    <a href="">Let's create that one!</a> <!-- Change -->
+    <a routerLink="/create">Let's create that one!</a>
   </div>
 </div>
 <ng-lottie  
@@ -46,6 +45,6 @@
   [options]="wavesLottie"
   height="50px"></ng-lottie>
 <i class="scroll-top-btn uil uil-angle-double-up"
-  [ngClass]="{ 'show-btn': showSTbutton }"
+  [ngClass]="{ 'show-btn': scrolledDown }"
   (click)="toTop()"></i>
 <slide-message [display]="added" [message]="slideMessage"></slide-message>
