--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,40 +3,33 @@
 .home-page {
   padding: 60px 0;
   .presentation {
-    text-align: center;
     font-size: 1.3em;
     h1 { line-height: 1 }
     p { font-weight: bold }
   }
   .query-interaction {
     width: 90%; margin: 1em auto;
+    .search-input, .results { max-width: 600px }
     .search-input {
       position: relative;
-      display: flex;
-      align-items: center;
       margin: auto;
-      input {
-        width: 100%;
-        padding: min(1.25em, 15px) .5em;
-        text-align: center;
-        border-radius: $radiusBase;
-        border: none;
-        background-color: #E5E5E5;
-        outline: none;
-        @media (min-width: 768px) { font-size: 15px }
-      }
-      .filter {
-        position: absolute; height: 100%;        
+      .icon {
+        position: absolute;
         display: flex; align-items: center;
         height: calc(100% - 14px);
         margin-left: 7px;
         padding: 7px;
         img { height: min(60%, 20px) }
-        i {
-          font-size: 1.1em;
-          margin-left: 3px;
-          transition-duration: .25s;
-        }
+      }
+      input {
+        width: calc(100% - 1em);
+        padding: min(1.25em, 15px) .5em;
+        text-align: center;
+        font-size: 15px;
+        border-radius: $radiusBase;
+        border: none;
+        background-color: #E5E5E5;
+        outline: none;
       }
     }
     .results {
@@ -47,22 +40,17 @@
       p { color: $darkGray; font-size: .9em }
       &.no-results {
         height: 200px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: grid;
+        place-items: center;
       }
-    }
-    .search-input, .results {
-      max-width: 600px;
-    }
+    }    
   }
   .not-found-action {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 1.5em;
   }
-  &.nodata-pos {
+  &.on-empty {
     position: absolute; width: 100%;
     top: 50%; transform: translateY(-50%);
   }
@@ -84,3 +72,5 @@
   cursor: pointer;
   &.show-btn { opacity: 1 }
 }
+
+// This stylesheet was reviewed (and summarized) on 08/26/2021
