--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -73,4 +73,4 @@
   &.show-btn { opacity: 1 }
 }
 
-// This stylesheet was reviewed (and summarized) on 08/26/2021
+// This stylesheet was reviewed (and summarized) on 08/26/2021;
