--- a/src/app/pages/package/package.component.html
+++ b/src/app/pages/package/package.component.html
@@ -3,15 +3,14 @@
     <h2>Your package</h2>
     <p>You’ve added the following songs</p>
   </div>
-  <div class="package-list" [ngClass]="{'empty': !_package.length}">
+  <div class="package-list" [ngClass]="{'empty-list': !_package.length}">
     <ng-container *ngIf="_package.length; else emptyPackage">
-      <song *ngFor="let song of _package"
-        [data]="song"
+      <song *ngFor="let song of _package; let i = index"
         [loading]="fetching"
+        [data]="song" [index]="i"
         [fetchingIndex]="findex"
-        [index]="_package.indexOf(song)"
         (onDelete)="deleteHandler($event)"
-        (onFetched)="updatedFetching($event)"
+        (onFetched)="updateFetching($event)"
         style="margin: 10px; border-radius: 6px">
       </song>
     </ng-container>
@@ -20,17 +19,19 @@
     </ng-template>
   </div>
   <div class="btns-group">
-    <button class="delete-all" (click)="clearPackage()" [disabled]="fetching">
+    <button class="delete-all" (click)="clearPackage()" [disabled]="fetching || !_package.length">
       Delete all
       <i class="uil uil-trash-alt"></i>
     </button>
-    <button class="download" (click)="isReady ? dl.click() : onDownload()" [disabled]="fetching">
+    <button class="download" (click)="isReady ? dl.click() : onDownload()" [disabled]="fetching || !_package.length">
       {{ isReady ? 'Download' : 'Set up for download' }}      
       <i [class]="isReady ? 'uil uil-import' : 'uil uil-sliders-v-alt'"></i>
       <a #dl [href]="downloadUrl" download="lasso-package.json"></a>
     </button>
   </div>
-  <a routerLink="/center/information">How does the songs package work?</a>
+  <a routerLink="/center/information">
+    How does the songs package work?
+  </a>
 </div>
 <slide-message
   [danger]="true"
