--- a/src/app/pages/create/pages/cover/cover.component.scss
+++ b/src/app/pages/create/pages/cover/cover.component.scss
@@ -1,4 +1,4 @@
-@import '../../../shared/sass/variables';
+@import '../../../../shared/sass/variables';
 @import '../create.styles.scss';
 
 :host {
