master: following with this

--- a/src/app/pages/create/pages/tags-form/components/tag-input/tag-input.component.scss
+++ b/src/app/pages/create/pages/tags-form/components/tag-input/tag-input.component.scss
@@ -1,6 +1,6 @@
 @import '../../../../../../shared/sass/variables';
 
-.custom-input {
+.tag-input {
   position: relative;
   input {
     background-color: $lightGray;
