--- a/src/app/pages/centers/pages/download/download.component.scss
+++ b/src/app/pages/centers/pages/download/download.component.scss
@@ -1,4 +1,4 @@
-@import '../../../shared/sass/variables';
+@import '../../../../shared/sass/variables';
 @import '../centers.styles.scss';
 
 .download-center {  
