master: getting into the testing part

--- a/src/app/pages/centers/pages/download/download.component.html
+++ b/src/app/pages/centers/pages/download/download.component.html
@@ -1,22 +1,15 @@
 <div class="download-center">
   <div class="page-header presentation">
     <h2>Download center</h2>
-    <p>Here you’ll can download our desktop app</p>
+    <p>Here you can get our desktop app</p>
     <figure class="hero">
       <img src="/assets/ilustrations/download.svg" alt="" />
     </figure>
-    <p>
-      The Lasso desktop app is only available for <strong>Windows</strong>.<br>
-      It'll be ready for others OS as soon as posible
+    <p class="info">
+      The Lasso desktop app was developed for <strong>Windows</strong> users. <br>
+      Our app is intuitive, I'm not going to explain how to use it.
+      <br>
     </p>
     <button>Download</button>
-  </div>
-  <div class="use-help presentation">
-    <h2>How does the app work?</h2>
-    <p>
-      Lasso desktop app is probably the heart of this application, after you
-      generate your package, you’ll can download it as a JSON file, then you import
-      it and click on download button and your songs will start to be downloaded.
-    </p>
   </div>
 </div>
