--- a/src/app/pages/centers/pages/download/download.component.scss
+++ b/src/app/pages/centers/pages/download/download.component.scss
@@ -1,46 +1,29 @@
-@import '../../../../shared/sass/variables';
-@import '../centers.styles.scss';
+@import '/src/app/shared/sass/variables';
 
-.download-center {  
-  padding: min(20%, 100px) 10px;
-  .presentation {
-    font-size: 20px;  
-    .hero {
-      width: 65%; max-width: 300px;
-      margin: 15px auto;
-      text-align: center;
-      img { width: 100% }
-    }    
-    button {
-      width: 100%; height: 50px;
-      max-width: 400px;
-      margin-top: 15px;
-      background-color: $lightGray;
-      border: none;
-      border-radius: 7px;
-      font-weight: bold;
-      font-size: 0.8em;
-      transition-duration: .25s;
-      &:hover { background-color: $lightBlue; color: white }
-    }  
+.download-center {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%, -50%);
+  width: calc(100% - 10px);
+  font-size: 1.3em;
+  max-width: 1000px;
+  figure {
+    width: 25%;
+    margin: 15px auto 0 auto;
+    img { width: 100% }
   }
-  .use-help {
-    font-size: 1em;
-    margin: 15px 0;
-    h2 { margin-bottom: 2.5px }
-  }
-  @media (min-width: 768px) {
-    .page-header {
-      @include aside-section;
-      left: 0;
-      width: 310px;
-      padding: 0 20px;
-      p:last-of-type {
-        font-size: 17px;
-        width: 285px;
-        margin: 0 auto;
-      }
+  .info, button { max-width: 550px; margin: auto }
+  button {
+    width: 100%; height: 50px;
+    margin-top: 15px;
+    cursor: pointer;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition-duration: .25s;
+    &:hover {
+      background-color: $lightBlue;
+      color: white;
     }
-    .use-help { @include aside-section(false) }
   }
 }
