--- a/src/app/shared/components/action-button/action-button.component.scss
+++ b/src/app/shared/components/action-button/action-button.component.scss
@@ -22,8 +22,8 @@
     img { width: 15px; transform: rotate(180deg) }
   }
   &:disabled {
-    background-color: darken($babyGreen, 25%);
-    cursor: initial;
+    background-color: darken($babyGreen, 10%);
+    cursor: not-allowed;
     img { opacity: 0 }
   }
 }
