--- a/src/app/pages/create/pages/tags-form/tags-form.component.html
+++ b/src/app/pages/create/pages/tags-form/tags-form.component.html
@@ -3,26 +3,26 @@
   <p>Fill the following fields to continue with the cover</p>
 </div>
 <div class="entries">
-  <tag-input
+  <field
     name="url"
     placeholder="Url"
     [control]="form.get('url')">
-  </tag-input>
-  <tag-input
+  </field>
+  <field
     name="title"
     placeholder="Title"
     [control]="form.get('title')">
-  </tag-input>
-  <tag-input
+  </field>
+  <field
     name="artist"
     placeholder="Artist"
     [control]="form.get('artist')">
-  </tag-input>
-  <tag-input
+  </field>
+  <field
     name="album"
     placeholder="Album"
     [control]="form.get('album')">
-  </tag-input>
+  </field>
 </div>
 <div class="btns-group" style="width: calc(100% - 2em); margin: 0 auto">
   <action-button [goback]="true"></action-button>
