--- a/src/app/pages/centers/pages/information/components/ask-me/ask-me.component.scss
+++ b/src/app/pages/centers/pages/information/components/ask-me/ask-me.component.scss
@@ -34,7 +34,10 @@
       width: 40%;
       margin-right: 10px;
     }   
-    &.submit { background-color: $lightBlue }
+    &.submit {
+      background-color: $lightBlue;
+      &:disabled { cursor: not-allowed }
+    }
   }
   &.show {
     pointer-events: all;
