--- a/src/app/pages/centers/pages/information/components/ask-me/ask-me.component.scss
+++ b/src/app/pages/centers/pages/information/components/ask-me/ask-me.component.scss
@@ -35,9 +35,27 @@
       margin-right: 10px;
     }   
     &.submit {
+      display: grid;
+      place-items: center;
       background-color: $lightBlue;
       &:disabled { cursor: not-allowed }
+      .loader {
+        width: 11px; height: 11px;
+        border: 3px solid;
+        border-radius: 50%;
+        border-top-color: transparent;
+        @keyframes spin {
+          from { transform: rotate(0deg) }
+          to { transform: rotate(360deg) }        
+        }
+        animation: spin 1s infinite;
+      }
     }
+  }
+  .on-sent {
+    text-align: left;
+    margin-top: 10px;
+    transition-duration: .25s;
   }
   &.show {
     pointer-events: all;
