master: the first deploy is ready

--- a/src/app/pages/centers/pages/download/download.component.html
+++ b/src/app/pages/centers/pages/download/download.component.html
@@ -10,6 +10,8 @@
       Our app is intuitive, I'm not going to explain how to use it.
       <br>
     </p>
-    <button>Download</button>
+    <a href="https://firebasestorage.googleapis.com/v0/b/lassodl.appspot.com/o/lasso-1.0.0.exe?alt=media&token=d2311aa7-8b8a-4eb8-a3e5-91dd00ea2f53" download>
+      Download
+    </a>
   </div>
 </div>
