--- a/src/app/pages/centers/pages/download/download.component.scss
+++ b/src/app/pages/centers/pages/download/download.component.scss
@@ -12,14 +12,20 @@
     margin: 15px auto 0 auto;
     img { width: 100% }
   }
-  .info, button { max-width: 550px; margin: auto }
-  button {
+  .info, a { max-width: 550px; margin: auto }
+  a {
     width: 100%; height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-top: 15px;
     cursor: pointer;
     font-size: 18px;
+    background-color: $lightGray;
+    color: initial;
     border: none;
     border-radius: 5px;
+    text-decoration: none;
     transition-duration: .25s;
     &:hover {
       background-color: $lightBlue;
