master: the cover issue was fixed

--- a/src/app/pages/create/pages/tags-form/tags-form.component.html
+++ b/src/app/pages/create/pages/tags-form/tags-form.component.html
@@ -8,6 +8,9 @@
     placeholder="Url"
     [control]="form.get('url')">
   </field>
+  <p class="invalid-yt-url" *ngIf="patternError">
+    Invalid Youtube URL
+  </p>
   <field
     name="title"
     placeholder="Title"
