--- a/src/app/pages/create/pages/tags-form/tags-form.component.scss
+++ b/src/app/pages/create/pages/tags-form/tags-form.component.scss
@@ -4,10 +4,17 @@
 :host {
   @include center-page;
   > *:not(a) { margin: .5em 1em }
-  .entries field {
-    display: block;
-    margin-bottom: 10px;
-  }  
+  .entries {
+    field {
+      display: block;
+      margin-bottom: 10px;
+    }
+    .invalid-yt-url {
+      margin: -5px 0 5px 0;
+      font-size: .9em;
+      color: $babyRed;
+    }
+  }
   a { margin: 10px 0 }
 }
 
