--- a/src/app/pages/create/pages/cover/cover.component.scss
+++ b/src/app/pages/create/pages/cover/cover.component.scss
@@ -12,18 +12,48 @@
     background-color: $lightGray;
     border-radius: 5px;
     margin: 10px 0;
-    p {
+    > p {
       font-size: 1.35em;
       font-weight: bold;
       color: $darkGray
     }
     .loaded-cover {
-      width: calc(100% - 20px);
-      height: calc(100% - 20px);
-      object-fit: cover;
-      border-radius: inherit;
-      transition-duration: .25s;
-      &:hover { width: 100%; height: 100% }
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      width: 100%; height: 100%;
+      img {
+        width: calc(100% - 20px);
+        height: calc(100% - 20px);
+        object-fit: cover;
+        border-radius: 5px;
+        transition-duration: .25s;
+      }
+      &:hover {
+        img { width: 100%; height: 100% }
+        .clear-cover { transform: initial }
+      }
+      .clear-cover {
+        position: absolute;
+        bottom: 20px; left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 35%;
+        padding: 10px;
+        background-color: $babyRed;
+        border-radius: 0 5px 5px 0;
+        color: white;
+        cursor: pointer;
+        transform: translateX(-100%);
+        transition-duration: .25s;
+        i {
+          font-size: 1.25em;
+          margin-left: 5px;
+        }
+      }
     }
   }
   .cover-input {
